--- a/config
+++ b/config
@@ -12,33 +12,26 @@ source_dir = ~/.gmi/src
 backup_dir = ~/.gmi/bak
 
 # date format in articles.
-date_format_articles = %F
+date_format_article = %F
 
 # date format in microblog
 date_format_micro = %F %T
 
-# articles section name
-articles_section_name = Articles
-
 # article section delimiter
-articles_section_delimiter = ---
-
-# archive title
-archive_title = Archive
+article_section_delimiter = ---
 
 # yearly archive title
 yearly_archive_title = %y Archive
 
-# auto archive frequency
-# min: 1 month
-# max: 6 months
-archive_frequency=6 months
-
 rss_title = 
 rss_description = 
+capsule_url = 
 
 server_destination_dir = 
+
+# Optional
 ssh_identity_file = 
+
+# Optional
 ssh_port = 
-capsule_url = 
 
